2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h}: Cache the Gdk::Color object used for
	files which failed to load.

	* src/mainwindow.cc: Replace some unnecessary run-time checked
	casts with static ones.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::on_filelist_bound_state_changed):
	Don't forget to update the prev/next match buttons' sensitivity.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.cc (FileList::find_files): Catch exceptions from
	Glib::Dir and Glib::file_test().

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (Util::convert_to_ascii): New function
	which replaces all non-ASCII characters with '?'.  This should be
	used for error messages when everything else failed.

	* src/filelist.cc: Use filename_to_utf8_fallback() in a few more
	places.  Also, if the filename conversion fails ultimately show a
	warning and skip the file.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (Util::filename_to_utf8_fallback): New
	wrapper function for Glib::filename_to_utf8() that works even if
	the user hasn't set G_BROKEN_FILENAMES correctly.  In that case
	it shows a hopefully annoying g_warning().

	* src/filelist.cc: Use Util::filename_to_utf8_fallback() where
	appropriate.
	* src/mainwindow.cc: ditto.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.cc: Speed up find_files() by updating the GUI
	every 16 iterations rather than all the time.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h} src/filelist.{cc,h}: Implement "Save" and
	"Save all" functionality.  Also, separate the file list boundary
	notification from signal_switch_buffer() -- should be a lot more
	robust now.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h} src/filelist.{cc,h}: Add "Save all" tool